Almost done beta (85% complete)

--- a/src/assets/styles/productpage/productpage-main-info.scss
+++ b/src/assets/styles/productpage/productpage-main-info.scss
@@ -37,6 +37,9 @@
             .productpage-active-button {
                 background-color: rgb(113, 75, 3);
             }
+            button:disabled {
+                opacity: 0.8;
+            }
         }
     }
 
