--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -19,4 +19,7 @@
 @import './productpage/productpage-images.scss';
 @import './productpage/productpage-main-info.scss';
 @import './productpage/productpage-additional-info.scss';
-@import './delivery/delivery.scss'
+@import './delivery/delivery.scss';
+@import './basket/basket.scss';
+@import './basket/product.scss';
+@import './basket/total.scss';
