--- a/src/assets/styles/delivery/delivery.scss
+++ b/src/assets/styles/delivery/delivery.scss
@@ -15,14 +15,14 @@
         padding: 25px 100px 25px 40px;
         h3 {
             font-weight: 600;
-            
+            margin-bottom: 5px;
         }
     .delivery-type {
         display: grid;
         grid-template-columns: 1fr 1fr 3fr;
         gap: 40px;
         h4, p {
-            color: rgb(111, 111, 111);
+            color: rgb(158, 156, 156);
         }
         p {
             margin-top: 15px;
