--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -23,3 +23,4 @@
 @import './basket/basket.scss';
 @import './basket/product.scss';
 @import './basket/total.scss';
+@import './favorite/favorite.scss';
