--- a/src/assets/styles/basket/basket.scss
+++ b/src/assets/styles/basket/basket.scss
@@ -7,7 +7,7 @@
 
 .basket-empty {
     text-align: center;
-    margin-top: 10%;
+    padding-top: 10%;
     p, a {
     font-size: 32px;
     }
@@ -18,7 +18,7 @@
             animation-name: basket;
             animation-duration: 4s;
             animation-iteration-count: infinite;
-            margin-top: 60px;
+            margin-top: 100px;
             width: 10em;
             height: 10em;
         path {
