--- a/src/assets/styles/catalogpage/filter.scss
+++ b/src/assets/styles/catalogpage/filter.scss
@@ -4,11 +4,37 @@
     flex-direction: column;
     gap: 22px;
     margin-left: 10%;
-    input {
-        position: absolute;
-        left: -99999px;
+    label {
+        cursor: pointer;
     }
     .radio-ukulele:checked {
         color: orange
     }
+
+    label>input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+      }
+
+    label>span::before {
+        content: '';
+        display: inline-block;
+        width: .5em;
+        height: .5em;
+        flex-shrink: 0;
+        flex-grow: 0;
+        border: 1px solid #adb5bd;
+        border-radius: 50%;
+        margin-right: 0.5em;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 50% 50%;
+      }
+      label>input:checked+span::before {
+        border-color: #ef9f0b;
+        background-color: #ef9f0b;
+      }
+  
 }
+
