--- a/src/assets/styles/header/header.scss
+++ b/src/assets/styles/header/header.scss
@@ -5,3 +5,20 @@ header {
     padding: 2.5% 10%;
     border-bottom: 1px solid white;
 }
+
+.header-count {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10px;
+    top: -12px;
+    left: 12px;
+    height: 10px;
+    font-size: 10px;
+    font-weight: 800;
+    padding: 5px 5px;
+    background-color: orange;
+    border-radius: 100%;
+    margin-bottom: -20px;
+}
