--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -24,3 +24,8 @@
 @import './basket/product.scss';
 @import './basket/total.scss';
 @import './favorite/favorite.scss';
+@import './about/about.scss';
+@import './basket/basket-modal.scss';
+@import './servicepage/service.scss';
+@import './contacts/contacts.scss';
+@import './teaching/teaching.scss';
