--- a/src/assets/styles/header/header.scss
+++ b/src/assets/styles/header/header.scss
@@ -4,6 +4,7 @@ header {
     justify-content: space-between;
     padding: 2.5% 10%;
     border-bottom: 1px solid white;
+    align-items: center;
 }
 
 .header-count {
